maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:33: error: not found: value estFacemur
    	} else if ((toucheMur())&&(toucheMurDroite())&&(estFacemur())){
                                                        ^