maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  def toucheMur():Boolean={
    gauche()
    if (estFaceMur){
      droite()
      return true
    }
    return false
  }
  
  def toucheMurDroite():Boolean={
    droite()
    if (estFaceMur){
      gauche()
      return true
    }
    return false
  }
  
  def keepHandOnSideWall(){
    while (!estSurBiscuit){
      if ((toucheMur())&&(!estFaceMur)){
        avance()
      } else if (toucheMur()&&(estFaceMur())){
        droite()
        avance()
      } else if ((!toucheMur())&&(estFaceMur())){
        gauche()
        avance()
      } else if ((!toucheMur())&&(!estFaceMur)){
      avance()
    	} else if ((toucheMur())&&(toucheMurDroite())&&(estFacemur())){
      droite(); droite()
    	}
    }
    prendBiscuit()
	}
  droite()
  keepHandOnSideWall()
}